Deleted recipe NONCONFORMITIES.compute_nouns_extracted_with_nltk

--- a/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
+++ b/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
@@ -1,13 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
   "metadata": {
     "kernelspec": {
       "display_name": "Python in SCW-FA (env markitdown)",
       "language": "python",
       "name": "py-dku-containerized-venv-markitdown-scw-fa"
     },
-    "associatedRecipe": "compute_nouns_extracted_with_nltk",
     "dkuGit": {
       "lastInteraction": 0
     },
@@ -21,10 +18,12 @@
     "creator": "ludovic.bocken@cgi.com",
     "createdOn": 1738688431757,
     "tags": [
-      "recipe-editor"
+      "deleted-recipe-editor"
     ],
     "customFields": {}
   },
+  "nbformat": 4,
+  "nbformat_minor": 0,
   "cells": [
     {
       "cell_type": "markdown",
@@ -34,10 +33,9 @@
       ]
     },
     {
+      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
-      "outputs": [],
-      "execution_count": 0,
       "source": [
         "# -*- coding: utf-8 -*-\n",
         "import dataiku\n",
@@ -47,20 +45,21 @@
         "from nltk import word_tokenize, pos_tag\n",
         "\n",
         "from nltk.tokenize import word_tokenize"
-      ]
+      ],
+      "outputs": []
     },
     {
+      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
-      "outputs": [],
-      "execution_count": 0,
       "source": [
         "nltk.download(\u0027punkt\u0027)\n",
         "nltk.download(\u0027punkt_tab\u0027)\n",
         "\n",
         "nltk.download(\u0027averaged_perceptron_tagger\u0027)\n",
         "nltk.download(\u0027averaged_perceptron_tagger_eng\u0027)"
-      ]
+      ],
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -70,33 +69,33 @@
       ]
     },
     {
+      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
-      "outputs": [],
-      "execution_count": 0,
       "source": [
         "corpus_for_knowledge_engineering \u003d dataiku.Dataset(\"corpus_for_knowledge_engineering\")\n",
         "corpus_for_knowledge_engineering_df \u003d corpus_for_knowledge_engineering.get_dataframe()"
-      ]
+      ],
+      "outputs": []
     },
     {
+      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
-      "outputs": [],
-      "execution_count": 0,
       "source": [
         "corpus_for_knowledge_engineering_df[\"lower_text\"] \u003d corpus_for_knowledge_engineering_df[\"text\"].str.lower()\n",
         "corpus_for_knowledge_engineering_df[\"upper_text\"] \u003d corpus_for_knowledge_engineering_df[\"text\"].str.upper()"
-      ]
+      ],
+      "outputs": []
     },
     {
+      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
-      "outputs": [],
-      "execution_count": 0,
       "source": [
         "corpus_for_knowledge_engineering_df"
-      ]
+      ],
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -106,10 +105,9 @@
       ]
     },
     {
+      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
-      "outputs": [],
-      "execution_count": 0,
       "source": [
         "# Define the function to extract nouns and return a DataFrame\n",
         "def extract_nouns(doc_id, text):\n",
@@ -117,36 +115,37 @@
         "    words_pos \u003d pos_tag(words)\n",
         "    nouns \u003d [(doc_id, word, pos) for word, pos in words_pos if pos.startswith(\u0027NN\u0027)]\n",
         "    return pd.DataFrame(nouns, columns\u003d[\u0027doc_id\u0027, \u0027word\u0027, \u0027tag\u0027])"
-      ]
+      ],
+      "outputs": []
     },
     {
+      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
-      "outputs": [],
-      "execution_count": 0,
       "source": [
         "# Apply the function to each row and concatenate the results\n",
         "pos_df \u003d pd.concat([extract_nouns(row[\u0027doc_id\u0027], row[\u0027text\u0027]) for _, row in corpus_for_knowledge_engineering_df.iterrows()], ignore_index\u003dTrue)"
-      ]
+      ],
+      "outputs": []
     },
     {
+      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
-      "outputs": [],
-      "execution_count": 0,
       "source": [
         "pos_df[\"string\"] \u003d pos_df[\"word\"].str.lower()\n",
         "pos_df \u003d pos_df.drop_duplicates()"
-      ]
+      ],
+      "outputs": []
     },
     {
+      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
-      "outputs": [],
-      "execution_count": 0,
       "source": [
         "pos_df"
-      ]
+      ],
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -156,53 +155,53 @@
       ]
     },
     {
+      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
-      "outputs": [],
-      "execution_count": 0,
       "source": [
         "# Apply the function to each row and concatenate the results\n",
         "lower_pos_df \u003d pd.concat([extract_nouns(row[\u0027doc_id\u0027], row[\u0027lower_text\u0027]) for _, row in corpus_for_knowledge_engineering_df.iterrows()], ignore_index\u003dTrue)"
-      ]
+      ],
+      "outputs": []
     },
     {
+      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
-      "outputs": [],
-      "execution_count": 0,
       "source": [
         "lower_pos_df[\"string\"] \u003d lower_pos_df[\"word\"].str.lower()\n",
         "lower_pos_df.rename(columns\u003d{\u0027tag\u0027:\u0027lower_tag\u0027}, inplace\u003dTrue)\n",
         "lower_pos_df.drop(columns\u003d[\u0027word\u0027], inplace\u003dTrue)\n",
         "lower_pos_df \u003d lower_pos_df.drop_duplicates()"
-      ]
+      ],
+      "outputs": []
     },
     {
+      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
-      "outputs": [],
-      "execution_count": 0,
       "source": [
         "lower_pos_df"
-      ]
+      ],
+      "outputs": []
     },
     {
+      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
-      "outputs": [],
-      "execution_count": 0,
       "source": [
         "merged_pos_df \u003d pd.merge(pos_df, lower_pos_df)"
-      ]
+      ],
+      "outputs": []
     },
     {
+      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
-      "outputs": [],
-      "execution_count": 0,
       "source": [
         "merged_pos_df"
-      ]
+      ],
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -212,87 +211,86 @@
       ]
     },
     {
+      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
-      "outputs": [],
-      "execution_count": 0,
       "source": [
         "# Apply the function to each row and concatenate the results\n",
         "upper_pos_df \u003d pd.concat([extract_nouns(row[\u0027doc_id\u0027], row[\u0027upper_text\u0027]) for _, row in corpus_for_knowledge_engineering_df.iterrows()], ignore_index\u003dTrue)"
-      ]
+      ],
+      "outputs": []
     },
     {
+      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
-      "outputs": [],
-      "execution_count": 0,
       "source": [
         "upper_pos_df[\"string\"] \u003d upper_pos_df[\"word\"].str.lower()\n",
         "upper_pos_df.rename(columns\u003d{\u0027tag\u0027:\u0027upper_tag\u0027}, inplace\u003dTrue)\n",
         "upper_pos_df.drop(columns\u003d[\u0027word\u0027], inplace\u003dTrue)\n",
         "upper_pos_df \u003d upper_pos_df.drop_duplicates()"
-      ]
+      ],
+      "outputs": []
     },
     {
+      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
-      "outputs": [],
-      "execution_count": 0,
       "source": [
         "merged_pos_df \u003d pd.merge(merged_pos_df, upper_pos_df)"
-      ]
+      ],
+      "outputs": []
     },
     {
+      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
-      "outputs": [],
-      "execution_count": 0,
       "source": [
         "nouns_extracted_with_nltk_df \u003d merged_pos_df.drop_duplicates()"
-      ]
+      ],
+      "outputs": []
     },
     {
+      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
-      "outputs": [],
-      "execution_count": 0,
       "source": [
         "nouns_extracted_with_nltk_df"
-      ]
+      ],
+      "outputs": []
     },
     {
+      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
-      "outputs": [],
-      "execution_count": 0,
       "source": [
         "nouns_frequency_df \u003d nouns_extracted_with_nltk_df[\"string\"].value_counts().rename_axis(\u0027string\u0027).reset_index(name\u003d\u0027frequency\u0027)"
-      ]
+      ],
+      "outputs": []
     },
     {
+      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
-      "outputs": [],
-      "execution_count": 0,
       "source": [
         "nouns_frequency_df"
-      ]
+      ],
+      "outputs": []
     },
     {
+      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
-      "outputs": [],
-      "execution_count": 0,
       "source": [
         "nouns_frequency_df \u003d nouns_frequency_df[nouns_frequency_df[\"frequency\"] \u003e 1]\n",
         "nouns_frequency_df.columns \u003d [\u0027string\u0027, \u0027frequency\u0027]"
-      ]
+      ],
+      "outputs": []
     },
     {
+      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
-      "outputs": [],
-      "execution_count": 0,
       "source": [
         "# Calculate relative frequency\n",
         "total_count \u003d nouns_frequency_df[\u0027frequency\u0027].sum()\n",
@@ -309,16 +307,17 @@
         "\n",
         "# Calculate pareto as cumulative_sum percentage\n",
         "nouns_frequency_df[\u0027pareto\u0027] \u003d (nouns_frequency_df[\u0027cumulative_sum\u0027] / total_count) * 100"
-      ]
+      ],
+      "outputs": []
     },
     {
+      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
-      "outputs": [],
-      "execution_count": 0,
       "source": [
         "nouns_frequency_df[nouns_frequency_df[\"pareto\"] \u003c 80]"
-      ]
+      ],
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -328,14 +327,14 @@
       ]
     },
     {
+      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
-      "outputs": [],
-      "execution_count": 0,
       "source": [
         "nouns_extracted_with_nltk \u003d dataiku.Dataset(\"nouns_extracted_with_nltk\")\n",
         "nouns_extracted_with_nltk.write_with_schema(nouns_frequency_df)"
-      ]
+      ],
+      "outputs": []
     }
   ]
 }
