Deleted recipe NONCONFORMITIES.compute_DTM_document_term_matrix

--- a/ipython_notebooks/notebook editor for compute_DTM_document_term_matrix.ipynb
+++ b/ipython_notebooks/notebook editor for compute_DTM_document_term_matrix.ipynb
@@ -18,12 +18,11 @@
       "nbconvert_exporter": "python",
       "file_extension": ".py"
     },
-    "associatedRecipe": "compute_DTM_document_term_matrix",
     "creator": "ludovic.bocken@cgi.com",
     "createdOn": 1738596141210,
     "customFields": {},
     "tags": [
-      "recipe-editor"
+      "deleted-recipe-editor"
     ],
     "modifiedBy": "ludovic.bocken@cgi.com"
   },
