--- a/ipython_notebooks/notebook editor for compute_corpus_strings_statistics_with_pareto.ipynb
+++ b/ipython_notebooks/notebook editor for compute_corpus_strings_statistics_with_pareto.ipynb
@@ -29,12 +29,11 @@
     "creator": "ludovic.bocken@cgi.com",
     "customFields": {},
     "tags": [
-      "recipe-editor"
+      "deleted-recipe-editor"
     ],
     "dkuGit": {
       "lastInteraction": 0
     },
-    "associatedRecipe": "compute_corpus_strings_statistics_with_pareto",
     "modifiedBy": "ludovic.bocken@cgi.com"
   },
   "nbformat": 4,
