--- a/ipython_notebooks/notebook editor for compute_strings_statistics.ipynb
+++ b/ipython_notebooks/notebook editor for compute_strings_statistics.ipynb
@@ -19,12 +19,11 @@
       "file_extension": ".py"
     },
     "modifiedBy": "ludovic.bocken@cgi.com",
-    "associatedRecipe": "compute_strings_statistics",
     "creator": "ludovic.bocken@cgi.com",
     "createdOn": 1738594642867,
     "customFields": {},
     "tags": [
-      "recipe-editor"
+      "deleted-recipe-editor"
     ]
   },
   "nbformat": 4,
