Deleted recipe NONCONFORMITIES.compute_rhnW9xGx

--- a/ipython_notebooks/notebook editor for compute_rhnW9xGx.ipynb
+++ b/ipython_notebooks/notebook editor for compute_rhnW9xGx.ipynb
@@ -1,26 +1,24 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
   "metadata": {
     "kernelspec": {
       "display_name": "Python in SCW-FA (env markitdown)",
       "language": "python",
       "name": "py-dku-containerized-venv-markitdown-scw-fa"
     },
-    "associatedRecipe": "compute_rhnW9xGx",
     "creator": "fabien.antoine@cgi.com",
     "createdOn": 1741384554025,
     "tags": [
-      "recipe-editor"
+      "deleted-recipe-editor"
     ],
     "customFields": {}
   },
+  "nbformat": 4,
+  "nbformat_minor": 0,
   "cells": [
     {
+      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
-      "outputs": [],
-      "execution_count": 0,
       "source": [
         "# -*- coding: utf-8 -*-\n",
         "import dataiku\n",
@@ -58,7 +56,8 @@
         "        md_file_name \u003d os.path.splitext(pdf_file)[0] + \".md\"\n",
         "        with A220_tech_docs_prep.get_writer(md_file_name) as writer:\n",
         "            writer.write(md_content.text_content.encode(\u0027utf-8\u0027))"
-      ]
+      ],
+      "outputs": []
     }
   ]
 }
