Deleted recipe NONCONFORMITIES.compute_AXB1Cyno

--- a/ipython_notebooks/notebook editor for compute_AXB1Cyno.ipynb
+++ b/ipython_notebooks/notebook editor for compute_AXB1Cyno.ipynb
@@ -19,9 +19,8 @@
       "file_extension": ".py"
     },
     "modifiedBy": "fabien.antoine@cgi.com",
-    "associatedRecipe": "compute_AXB1Cyno",
     "tags": [
-      "recipe-editor"
+      "deleted-recipe-editor"
     ],
     "creator": "fabien.antoine@cgi.com",
     "createdOn": 1735159724979,
