Saved Jupyter notebook 'notebook editor for compute_d7DdDueY'

--- a/ipython_notebooks/notebook editor for compute_d7DdDueY.ipynb
+++ b/ipython_notebooks/notebook editor for compute_d7DdDueY.ipynb
@@ -6,6 +6,18 @@
       "language": "python"
     },
     "hide_input": false,
+    "language_info": {
+      "name": "python",
+      "version": "3.11.10",
+      "mimetype": "text/x-python",
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "pygments_lexer": "ipython3",
+      "nbconvert_exporter": "python",
+      "file_extension": ".py"
+    },
     "createdOn": 1741384580258,
     "associatedRecipe": "compute_d7DdDueY",
     "creationTag": {
