Saved Jupyter notebook 'notebook editor for compute_d7DdDueY'

--- a/ipython_notebooks/notebook editor for compute_d7DdDueY.ipynb
+++ b/ipython_notebooks/notebook editor for compute_d7DdDueY.ipynb
@@ -18,6 +18,7 @@
       "nbconvert_exporter": "python",
       "file_extension": ".py"
     },
+    "modifiedBy": "fabien.antoine@cgi.com",
     "createdOn": 1741384580258,
     "associatedRecipe": "compute_d7DdDueY",
     "creationTag": {
@@ -34,8 +35,7 @@
     "dkuGit": {
       "lastInteraction": 0
     },
-    "creator": "fabien.antoine@cgi.com",
-    "modifiedBy": "fabien.antoine@cgi.com"
+    "creator": "fabien.antoine@cgi.com"
   },
   "nbformat": 4,
   "nbformat_minor": 1,
